// Copyright (c) Outernet Council and Contributors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package nmts.types.ieee;

option java_package = "org.outernetcouncil.nmts.proto.types.ieee";

// Identifies an "EtherType" value.
//
// See IEEE site for complete list:
//   https://standards-oui.ieee.org/ethertype/eth.txt
//
// See also the IANA registry for IEEE 802 Numbers:
//   https://www.iana.org/assignments/ieee-802-numbers/ieee-802-numbers.xhtml
message EtherType {
  // A collection of well-known EtherTypes.
  enum Eth {
    ETH_UNSPECIFIED = 0;
    ETH_IPV4 = 2048;   // 0x0800
    ETH_ARP = 2054;    // 0x0806
    ETH_TEB = 25944;   // 0x6558 (Transparent Ethernet Bridging)
    ETH_CTAG = 33024;  // 0x8100 (IEEE 802.1Q C-VLAN tag)
    ETH_IPV6 = 34525;  // 0x86dd
    ETH_MPLS = 34887;  // 0x8847
    // Formerly MPLS multicast; see RFC 5332.
    ETH_MPLS_UP = 34888;  // 0x8848; upstream-assigned label
    ETH_STAG = 34984;  // 0x88A8 (IEEE 802.1ad, "QinQ" S-VLAN tag)
    ETH_ITAG = 35047;  // 0x88E7 (IEEE 802.1Q, Backbone Service Instance tag)
  }

  oneof type {
    Eth eth = 1;
    uint32 u16 = 2;
  }
}
